// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SamoletHeader given "user" with role renders correctly 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 12px;
  height: 32px;
}

.c2 {
  cursor: pointer;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  gap: 12px;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c4.rovna-ui-typography-text {
  line-height: 20px;
  font-weight: 400;
  color: #FFFFFFFF;
}

.c8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 29px;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  margin-top: 8px;
}

.c6 {
  margin: 0;
  padding: 0;
  border: none;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: Museo Sans Cyrl,sans-serif;
  font-size: 14px;
  font-style: normal;
  font-weight: 600;
  line-height: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 4px;
  outline-offset: 2px;
  height: -webkit-max-content;
  height: -moz-max-content;
  height: max-content;
  -webkit-transition: 0.2s cubic-bezier(0.645,0.045,0.355,1);
  transition: 0.2s cubic-bezier(0.645,0.045,0.355,1);
  -webkit-transition-property: background,color,border;
  transition-property: background,color,border;
  border-radius: 8px;
  padding: 6px 16px;
  color: #FFFFFFFF;
  background: transparent;
}

.c6:focus-visible {
  outline: #FFFFFFFF solid 2px;
}

.c6:hover:not(:disabled) {
  cursor: pointer;
  color: #E8E9EBFF;
  background: #FFFFFF1A;
}

.c6:active:not(:disabled) {
  color: #DDDEE1FF;
  background: #FFFFFF26;
}

.c6:disabled {
  cursor: not-allowed;
  color: #FFFFFFB3;
}

.c6 .anticon,
.c6 .rovna-ui-icon-root {
  font-size: 16px;
}

.c6:where(.rovna-ui-button-variant-secondary.rovna-ui-button-size-large):not( .rovna-ui-button-has-before, .rovna-ui-button-has-after ) {
  padding: calc(10px - 1px) 20px;
}

.c6:where(.rovna-ui-button-variant-secondary.rovna-ui-button-size-medium):not( .rovna-ui-button-has-before, .rovna-ui-button-has-after ) {
  padding: calc(6px - 1px) 16px;
}

.c6:where(.rovna-ui-button-variant-secondary.rovna-ui-button-size-small):not( .rovna-ui-button-has-before, .rovna-ui-button-has-after ) {
  padding: calc(2px - 1px) 16px;
}

.c6:where( .rovna-ui-button-variant-secondary.rovna-ui-button-size-large.rovna-ui-button-icon-only ) {
  padding: calc(12px - 1px);
}

.c6:where( .rovna-ui-button-variant-secondary.rovna-ui-button-size-medium.rovna-ui-button-icon-only ) {
  padding: calc(8px - 1px);
}

.c6:where( .rovna-ui-button-variant-secondary.rovna-ui-button-size-small.rovna-ui-button-icon-only ) {
  padding: calc(4px - 1px);
}

.c6:where( .rovna-ui-button-variant-secondary.rovna-ui-button-size-large.rovna-ui-button-has-before, .rovna-ui-button-variant-secondary.rovna-ui-button-size-large.rovna-ui-button-has-after ):not(.rovna-ui-button-icon-only) {
  padding: calc(10px - 1px) 20px calc(10px - 1px) 16px;
}

.c6:where( .rovna-ui-button-variant-secondary.rovna-ui-button-size-medium.rovna-ui-button-has-before, .rovna-ui-button-variant-secondary.rovna-ui-button-size-medium.rovna-ui-button-has-after ):not(.rovna-ui-button-icon-only) {
  padding: calc(6px - 1px) 16px calc(6px - 1px) 12px;
}

.c6:where( .rovna-ui-button-variant-secondary.rovna-ui-button-size-small.rovna-ui-button-has-before, .rovna-ui-button-variant-secondary.rovna-ui-button-size-small.rovna-ui-button-has-after ):not(.rovna-ui-button-icon-only) {
  padding: calc(2px - 1px) 12px calc(2px - 1px) 8px;
}

.c7 {
  font-family: Museo Sans Cyrl;
  color: #0062C9FF;
  font-size: 14px;
  font-style: normal;
  font-weight: 600;
  line-height: 20px;
  box-sizing: border-box;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-radius: 50%;
  background-color: #E5F2FFFF;
  overflow: hidden;
  width: 32px;
  height: 32px;
  cursor: pointer;
  border-style: solid;
  border-color: transparent;
  border-width: 2px;
  -webkit-transition: 0.2s cubic-bezier(0.645,0.045,0.355,1);
  transition: 0.2s cubic-bezier(0.645,0.045,0.355,1);
  -webkit-transition-property: border-color;
  transition-property: border-color;
}

.c7:hover {
  border-color: #E5F2FFFF;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.c3 .rovna-ui-icon-root {
  font-size: 20px;
  color: #FFFFFFFF;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 8px;
  position: -webkit-sticky;
  position: sticky;
  z-index: 999;
  top: -52px;
  padding: 8px 16px;
  background-color: #0062C9FF;
}

<header
  className="c0 rovna-ui-header-root"
>
  <div
    className="c1"
  >
    <div
      className="c2 c3 rovna-ui-logo-root"
      onClick={[Function]}
    >
      <span
        className="rovna-ui-typography c4 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
        data-testid="rovna-ui-text"
        style={
          {
            "WebkitLineClamp": undefined,
            "display": "block",
            "whiteSpace": "nowrap",
          }
        }
      >
        <strong>
          S.Pro
        </strong>
      </span>
    </div>
    <div
      className="c5"
    >
      <button
        className="c6 rovna-ui-button rovna-ui-button-disabled rovna-ui-button-variant-ghost rovna-ui-button-preset-accent rovna-ui-button-size-medium"
        data-testid="rovna-ui-button"
        disabled={true}
        onClick={[Function]}
        style={
          {
            "fontSize": "12px",
            "padding": "8px",
          }
        }
        type="button"
      >
        Аналитика
      </button>
      <button
        className="c6 rovna-ui-button rovna-ui-button-disabled rovna-ui-button-variant-ghost rovna-ui-button-preset-accent rovna-ui-button-size-medium"
        data-testid="rovna-ui-button"
        disabled={true}
        onClick={[Function]}
        style={
          {
            "fontSize": "12px",
            "padding": "8px",
          }
        }
        type="button"
      >
        Помощь
      </button>
    </div>
    <span
      className="c7 rovna-ui-avatar-root"
      data-testid="rovna-ui-avatar-root"
    >
      <span
        className="rovna-ui-avatar-fallback rovna-ui-dropdown-trigger "
        data-testid="rovna-ui-avatar-fallback"
        onClick={[Function]}
      >
        <span
          className="c8 rovna-ui-icon-root anticon"
        >
          <svg
            fill="none"
            height="1em"
            viewBox="0 0 44 40"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M22 22C26.9706 22 31 17.9706 31 13C31 8.02944 26.9706 4 22 4C17.0294 4 13 8.02944 13 13C13 17.9706 17.0294 22 22 22Z"
              fill="#99CAFE"
            />
            <path
              d="M22 26.5C12.982 26.5 5.638 32.548 5.638 40C5.638 40.504 6.034 40.9 6.538 40.9H37.462C37.966 40.9 38.362 40.504 38.362 40C38.362 32.548 31.018 26.5 22 26.5Z"
              fill="#007BFB"
            />
          </svg>
        </span>
      </span>
    </span>
  </div>
</header>
`;

exports[`SamoletHeader given "user" without role renders correctly 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 12px;
  height: 32px;
}

.c2 {
  cursor: pointer;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  gap: 12px;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c4.rovna-ui-typography-text {
  line-height: 20px;
  font-weight: 400;
  color: #FFFFFFFF;
}

.c8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 29px;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  margin-top: 8px;
}

.c6 {
  margin: 0;
  padding: 0;
  border: none;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: Museo Sans Cyrl,sans-serif;
  font-size: 14px;
  font-style: normal;
  font-weight: 600;
  line-height: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 4px;
  outline-offset: 2px;
  height: -webkit-max-content;
  height: -moz-max-content;
  height: max-content;
  -webkit-transition: 0.2s cubic-bezier(0.645,0.045,0.355,1);
  transition: 0.2s cubic-bezier(0.645,0.045,0.355,1);
  -webkit-transition-property: background,color,border;
  transition-property: background,color,border;
  border-radius: 8px;
  padding: 6px 16px;
  color: #FFFFFFFF;
  background: transparent;
}

.c6:focus-visible {
  outline: #FFFFFFFF solid 2px;
}

.c6:hover:not(:disabled) {
  cursor: pointer;
  color: #E8E9EBFF;
  background: #FFFFFF1A;
}

.c6:active:not(:disabled) {
  color: #DDDEE1FF;
  background: #FFFFFF26;
}

.c6:disabled {
  cursor: not-allowed;
  color: #FFFFFFB3;
}

.c6 .anticon,
.c6 .rovna-ui-icon-root {
  font-size: 16px;
}

.c6:where(.rovna-ui-button-variant-secondary.rovna-ui-button-size-large):not( .rovna-ui-button-has-before, .rovna-ui-button-has-after ) {
  padding: calc(10px - 1px) 20px;
}

.c6:where(.rovna-ui-button-variant-secondary.rovna-ui-button-size-medium):not( .rovna-ui-button-has-before, .rovna-ui-button-has-after ) {
  padding: calc(6px - 1px) 16px;
}

.c6:where(.rovna-ui-button-variant-secondary.rovna-ui-button-size-small):not( .rovna-ui-button-has-before, .rovna-ui-button-has-after ) {
  padding: calc(2px - 1px) 16px;
}

.c6:where( .rovna-ui-button-variant-secondary.rovna-ui-button-size-large.rovna-ui-button-icon-only ) {
  padding: calc(12px - 1px);
}

.c6:where( .rovna-ui-button-variant-secondary.rovna-ui-button-size-medium.rovna-ui-button-icon-only ) {
  padding: calc(8px - 1px);
}

.c6:where( .rovna-ui-button-variant-secondary.rovna-ui-button-size-small.rovna-ui-button-icon-only ) {
  padding: calc(4px - 1px);
}

.c6:where( .rovna-ui-button-variant-secondary.rovna-ui-button-size-large.rovna-ui-button-has-before, .rovna-ui-button-variant-secondary.rovna-ui-button-size-large.rovna-ui-button-has-after ):not(.rovna-ui-button-icon-only) {
  padding: calc(10px - 1px) 20px calc(10px - 1px) 16px;
}

.c6:where( .rovna-ui-button-variant-secondary.rovna-ui-button-size-medium.rovna-ui-button-has-before, .rovna-ui-button-variant-secondary.rovna-ui-button-size-medium.rovna-ui-button-has-after ):not(.rovna-ui-button-icon-only) {
  padding: calc(6px - 1px) 16px calc(6px - 1px) 12px;
}

.c6:where( .rovna-ui-button-variant-secondary.rovna-ui-button-size-small.rovna-ui-button-has-before, .rovna-ui-button-variant-secondary.rovna-ui-button-size-small.rovna-ui-button-has-after ):not(.rovna-ui-button-icon-only) {
  padding: calc(2px - 1px) 12px calc(2px - 1px) 8px;
}

.c7 {
  font-family: Museo Sans Cyrl;
  color: #0062C9FF;
  font-size: 14px;
  font-style: normal;
  font-weight: 600;
  line-height: 20px;
  box-sizing: border-box;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-radius: 50%;
  background-color: #E5F2FFFF;
  overflow: hidden;
  width: 32px;
  height: 32px;
  cursor: pointer;
  border-style: solid;
  border-color: transparent;
  border-width: 2px;
  -webkit-transition: 0.2s cubic-bezier(0.645,0.045,0.355,1);
  transition: 0.2s cubic-bezier(0.645,0.045,0.355,1);
  -webkit-transition-property: border-color;
  transition-property: border-color;
}

.c7:hover {
  border-color: #E5F2FFFF;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.c3 .rovna-ui-icon-root {
  font-size: 20px;
  color: #FFFFFFFF;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 8px;
  position: -webkit-sticky;
  position: sticky;
  z-index: 999;
  top: -52px;
  padding: 8px 16px;
  background-color: #0062C9FF;
}

<header
  className="c0 rovna-ui-header-root"
>
  <div
    className="c1"
  >
    <div
      className="c2 c3 rovna-ui-logo-root"
      onClick={[Function]}
    >
      <span
        className="rovna-ui-typography c4 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
        data-testid="rovna-ui-text"
        style={
          {
            "WebkitLineClamp": undefined,
            "display": "block",
            "whiteSpace": "nowrap",
          }
        }
      >
        <strong>
          S.Pro
        </strong>
      </span>
    </div>
    <div
      className="c5"
    >
      <button
        className="c6 rovna-ui-button rovna-ui-button-disabled rovna-ui-button-variant-ghost rovna-ui-button-preset-accent rovna-ui-button-size-medium"
        data-testid="rovna-ui-button"
        disabled={true}
        onClick={[Function]}
        style={
          {
            "fontSize": "12px",
            "padding": "8px",
          }
        }
        type="button"
      >
        Помощь
      </button>
    </div>
    <span
      className="c7 rovna-ui-avatar-root"
      data-testid="rovna-ui-avatar-root"
    >
      <span
        className="rovna-ui-avatar-fallback rovna-ui-dropdown-trigger "
        data-testid="rovna-ui-avatar-fallback"
        onClick={[Function]}
      >
        <span
          className="c8 rovna-ui-icon-root anticon"
        >
          <svg
            fill="none"
            height="1em"
            viewBox="0 0 44 40"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M22 22C26.9706 22 31 17.9706 31 13C31 8.02944 26.9706 4 22 4C17.0294 4 13 8.02944 13 13C13 17.9706 17.0294 22 22 22Z"
              fill="#99CAFE"
            />
            <path
              d="M22 26.5C12.982 26.5 5.638 32.548 5.638 40C5.638 40.504 6.034 40.9 6.538 40.9H37.462C37.966 40.9 38.362 40.504 38.362 40C38.362 32.548 31.018 26.5 22 26.5Z"
              fill="#007BFB"
            />
          </svg>
        </span>
      </span>
    </span>
  </div>
</header>
`;
